# Temperature-Wireless-Sensor-Network

./: README.md
ESP-MESH/: platformio.ini
ESP-MESH/backup/: APnode.cpp  MQTTBridge.cpp  Node1.cpp  Node2.cpp  STAnode.cpp  ota.cpp  test.cpp
ESP-MESH/src/: APnode.cpp  STAnode_withLed.cpp  node.cpp
Nodes/: README.md  stanode.cpp  stanode_withled.cpp
Nodes/apnode/: README.md  apnode.cpp
Nodes/stanode/: README.md
OTA/: README.md
OTA/v0.0.0/: README.md
log/: log.py  terminal_log.txt
painlessmesh_ESP8266/: platformio.ini
painlessmesh_ESP8266/backup/: APnode.cpp  BridgeNode.cpp  STAnode.cpp  ota.cpp  sender.cpp  stanode.cpp
painlessmesh_ESP8266/data/: node.cpp
painlessmesh_ESP8266/src/: STAnode_withLed.cpp  apnode.cpp  ota.cpp
painlessmeshboost/: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  autotest.sh
painlessmeshboost/libs/painlessMesh/: .gitignore  .gitlab-ci.yml  library.json  library.properties
painlessmeshboost/libs/painlessMesh/src/: painlessMeshSTA.cpp  painlessMeshSTA.h
painlessmeshboost/libs/painlessMesh/src/arduino/: wifi.hpp
painlessmeshboost/libs/painlessMesh/src/painlessmesh/: router.hpp
painlessmeshboost/libs/painlessMesh/test/startHere/: startHere.ino
painlessmeshboost/log/: README.md  terminal_log.txt
painlessmeshboost/src/: Arduino.h  main.cpp  ota.hpp
